tests/Checker/everything/errors/2f.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 2(5)..2(8): *2: identifier redeclared
Compilation was unsuccessful.
